edited minor comment

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
 /.metadata/
+DanceDanceMachineLearn/MyCode/.metadata/version.ini
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.ui.workbench/workingsets.xml
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.ui.intro/introstate
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.oomph.setup/workspace.setup
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.m2e.logback.configuration/logback.1.8.0.20170516-2043.xml
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.jdt.core/index.db
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/server-config.json
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/write.lock
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/segments_1
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/_0.si
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/_0.cfs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/_0.cfe
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache.lucene60/write.lock
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.tasks.ui.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.monitor.ui.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.context.core.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jdt.ui.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.epp.logging.aeri.ide.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
+DanceDanceMachineLearn/MyCode/.metadata/.mylyn/.taskListIndex/write.lock
+DanceDanceMachineLearn/MyCode/.metadata/.mylyn/.taskListIndex/segments_1
+DanceDanceMachineLearn/MyCode/.metadata/.lock
