--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,28 @@ DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.resources/.roo
 DanceDanceMachineLearn/MyCode/.metadata/.mylyn/.taskListIndex/write.lock
 DanceDanceMachineLearn/MyCode/.metadata/.mylyn/.taskListIndex/segments_1
 DanceDanceMachineLearn/MyCode/.metadata/.lock
+DanceDanceMachineLearn/MyCode/.metadata/.mylyn/tasks.xml.zip
+DanceDanceMachineLearn/MyCode/.metadata/.mylyn/repositories.xml.zip
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.ui.workbench/dialog_settings.xml
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.ui.intro/dialog_settings.xml
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.ui.ide/dialog_settings.xml
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.jdt.ui/dialog_settings.xml
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.jdt.ui/QualifiedTypeNameHistory.xml
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.jdt.core/externalFilesCache
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.jdt.core/assumedExternalFilesCache
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache.lucene60/segments_1
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.workbench.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.m2e.discovery.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.core.resources.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.resources/.root/1.tree
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.version
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/history.version
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.jdt.ui/OpenTypeHistory.xml
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.jdt.core/nonChainingJarsCache
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.editors.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.team.ui.prefs
+DanceDanceMachineLearn/MyCode/.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
